Delete lock before restarting rtorrent

--- a/_nodes/seedbox/etc/supervisor/conf.d/rtorrent.conf
+++ b/_nodes/seedbox/etc/supervisor/conf.d/rtorrent.conf
@@ -1,5 +1,5 @@
 [program:rtorrent]
-command=/usr/bin/rtorrent
+command=/home/ubuntu/bin/no-lock-r.sh
 directory=/home/ubuntu
 process_name=%(program_name)s
 autostart=true
