--- a/shell/.tmux.conf
+++ b/shell/.tmux.conf
@@ -1,5 +1,9 @@
+# increase scrollback lines
+set -g history-limit 100000
+
 # improve colors
-set -g default-terminal 'screen-256color'
+set -g default-terminal "tmux-256color"
+set -ga terminal-overrides ",alacritty:Tc"
 
 # terminator like window splits
 bind e split-window -h -c '#{pane_current_path}'
@@ -16,45 +20,10 @@ bind a send-prefix
 set -g base-index 1
 set -g renumber-windows on
 
-# --- colors (solarized dark)
-# default statusbar colors
-set -g status-bg black
-set -g status-fg yellow
-set -g status-attr default
-
-# default window title colors
-setw -g window-status-fg brightblue
-setw -g window-status-bg default
-
-# active window title colors
-setw -g window-status-current-fg yellow
-setw -g window-status-current-bg default
-setw -g window-status-current-attr dim
-
-# pane border
-set -g pane-border-fg black
-set -g pane-border-bg default
-set -g pane-active-border-fg yellow
-set -g pane-active-border-bg default
-
-# command line/message text
-set -g message-bg black
-set -g message-fg yellow
-
-# pane number display
-set -g display-panes-active-colour yellow
-set -g display-panes-colour brightblue
-
-# clock
-setw -g clock-mode-colour yellow
-# --- end colors
-
 # remove administrative debris (session name, hostname, time) in status bar
 set -g status-left ''
 set -g status-right ''
 
-# increase scrollback lines
-set -g history-limit 30000
 
 # force a reload of the config file
 unbind r
@@ -121,3 +90,34 @@ bind-key -T copy-mode-vi TripleClick1Pane \
 # extrakto config
 set -g @extrakto_grab_area "0"
 run-shell ~/.tmux/extrakto/extrakto.tmux
+
+# COLOUR (base16)
+
+# default statusbar colors
+set-option -g status-style "fg=#bdae93,bg=#3c3836"
+
+# default window title colors
+set-window-option -g window-status-style "fg=#bdae93,bg=default"
+
+# active window title colors
+set-window-option -g window-status-current-style "fg=#fabd2f,bg=default"
+
+# pane border
+set-option -g pane-border-style "fg=#3c3836"
+set-option -g pane-active-border-style "fg=#504945"
+
+# message text
+set-option -g message-style "fg=#d5c4a1,bg=#3c3836"
+
+# pane number display
+set-option -g display-panes-active-colour "#b8bb26"
+set-option -g display-panes-colour "#fabd2f"
+
+# clock
+set-window-option -g clock-mode-colour "#b8bb26"
+
+# copy mode highligh
+set-window-option -g mode-style "fg=#bdae93,bg=#504945"
+
+# bell
+set-window-option -g window-status-bell-style "fg=#3c3836,bg=#fb4934"
