--- a/wm/.i3/config
+++ b/wm/.i3/config
@@ -14,8 +14,8 @@ for_window [class="^jetbrains-.+"][window_type=dialog] focus
 assign [instance="^roamresearch.*$"] 7
 
 # terminals
-bindsym $mod+Return exec urxvt
-bindsym $mod+0x60 exec urxvt -e sh -c "tmux attach -d -t base || exec tmux new -s base"
+bindsym $mod+Return exec alacritty
+bindsym $mod+0x60 exec alacritty -e sh -c "tmux attach -d -t base || exec tmux new -s base"
 bindsym $mod+0x27 exec --no-startup-id roam
 bindsym $mod+m exec --no-startup-id rofi-emoji
 bindsym $mod+t exec thunar
