Alacritty: clickable URLs

--- a/wm/.config/alacritty/alacritty.yml
+++ b/wm/.config/alacritty/alacritty.yml
@@ -50,3 +50,6 @@ colors:
 key_bindings:
   - { key: V,        mods: Control, action: Paste                            }
   - { key: C,        mods: Control|Shift, action: Copy                             }
+
+url:
+  launcher: xdg-open
