Fix fonts some more

--- a/devel/.config/VSCodium/User/settings.json
+++ b/devel/.config/VSCodium/User/settings.json
@@ -1,6 +1,6 @@
 {
     "breadcrumbs.enabled": false,
-    "editor.fontFamily": "'Iosevka Nerd Font'",
+    "editor.fontFamily": "Iosevka",
     "editor.fontSize": 14,
     "editor.fontWeight": "400",
     "editor.minimap.enabled": false,
