--- a/_arch/etc/interception/udevmon.yaml
+++ b/_arch/etc/interception/udevmon.yaml
@@ -4,3 +4,6 @@
 - JOB: "intercept -g $DEVNODE | dual-function-keys -c /etc/interception/dual-function-keys/modifiers.yaml | uinput -d $DEVNODE"
   DEVICE:
     NAME: "AT Translated Set 2 keyboard"
+- JOB: "intercept -g $DEVNODE | dual-function-keys -c /etc/interception/dual-function-keys/modifiers.yaml | uinput -d $DEVNODE"
+  DEVICE:
+    NAME: "Apple Inc. Apple Internal Keyboard / Trackpad"
