[git] adjust tig colors

--- a/devel/.tigrc
+++ b/devel/.tigrc
@@ -137,5 +137,5 @@ set mouse			= no		# Enable mouse support?
 set mouse-scroll		= 3		# Number of lines to scroll via the mouse
 set mouse-wheel-cursor		= no		# Prefer moving the cursor to scrolling the view?
 
-color cursor blue default standout
+color cursor black green standout 
 
