--- a/wm/.config/alacritty/alacritty.yml
+++ b/wm/.config/alacritty/alacritty.yml
@@ -6,8 +6,8 @@ scrolling:
 
 font:
   normal:
-    family: "Iosevka Term"
-  size: 15.0
+    family: "Fantasque Sans Mono"
+  size: 18.0
   use_thin_strokes: true
 
 colors:
@@ -48,8 +48,26 @@ colors:
     - { index: 21, color: '#ebdbb2' }
 
 key_bindings:
-  - { key: V,        mods: Control, action: Paste                            }
-  - { key: C,        mods: Control|Shift, action: Copy                             }
+  - { key: C,  mods: Control|Shift, action: Copy }
+  - { key: F,  mods: Alt, chars: "\x1bf" }
+  - { key: B,  mods: Alt, chars: "\x1bb" }
+  - { key: Key0, mods: Alt, chars: "\x1b0" }
+  - { key: Key1, mods: Alt, chars: "\x1b1" }
+  - { key: Key2, mods: Alt, chars: "\x1b2" }
+  - { key: Key3, mods: Alt, chars: "\x1b3" }
+  - { key: Key4, mods: Alt, chars: "\x1b4" }
+  - { key: Key5, mods: Alt, chars: "\x1b5" }
+  - { key: Key6, mods: Alt, chars: "\x1b6" }
+  - { key: Key7, mods: Alt, chars: "\x1b7" }
+  - { key: Key8, mods: Alt, chars: "\x1b8" }
+  - { key: Key9, mods: Alt, chars: "\x1b9" }
+  - { key: H, mods: Alt, chars: "\x1bh" }
+  - { key: J, mods: Alt, chars: "\x1bj" }
+  - { key: K, mods: Alt, chars: "\x1bk" }
+  - { key: L, mods: Alt, chars: "\x1bl" }
+  - { key: J, mods: Alt|Shift, chars: "\x0A" }
+  - { key: K, mods: Alt|Shift, chars: "\x0B" }
+  - { key: L, mods: Command, chars: "\x0C" }
 
 url:
-  launcher: xdg-open
+  launcher: open
