--- a/_nodes/mcbrick/.yabairc
+++ b/_nodes/mcbrick/.yabairc
@@ -1,5 +1,9 @@
 #!/usr/bin/env sh
 
+# go eat a hamburger, big sur
+sudo yabai --load-sa
+yabai -m signal --add event=dock_did_restart action="sudo yabai --load-sa"
+
 # global settings
 yabai -m config layout bsp
 yabai -m config external_bar                 off:45:0
@@ -9,8 +13,7 @@ yabai -m config window_placement             second_child
 yabai -m config window_topmost               on
 yabai -m config window_shadow                off
 yabai -m config window_opacity               off
-yabai -m config window_border                on
-yabai -m config window_border_width          2
+yabai -m config window_border                off
 yabai -m config active_window_border_color   0xff4c7899
 yabai -m config normal_window_border_color   0xff555555
 yabai -m config insert_feedback_color        0xaad75f5f
