--- a/_nodes/mcbrick/.yabairc
+++ b/_nodes/mcbrick/.yabairc
@@ -23,3 +23,16 @@ yabai -m config mouse_modifier               fn
 yabai -m config mouse_action1                move
 yabai -m config mouse_action2                resize
 
+# bunch of rules
+yabai -m rule --add label="Finder" app="^Finder$" title="(Co(py|nnect)|Move|Info|Pref)" manage=off
+yabai -m rule --add label="System Preferences" app="^System Preferences$" manage=off
+yabai -m rule --add label="App Store" app="^App Store$" manage=off
+yabai -m rule --add label="Activity Monitor" app="^Activity Monitor$" manage=off
+yabai -m rule --add label="Calculator" app="^Calculator$" manage=off
+yabai -m rule --add label="Dictionary" app="^Dictionary$" manage=off
+yabai -m rule --add label="mpv" app="^mpv$" manage=off
+yabai -m rule --add label="VirtualBox" app="^VirtualBox$" manage=off
+
+yabai -m rule --add label="any preference dialogs" title="[Pp]reference" manage=off
+yabai -m rule --add label="Intellij Welcome" title="Welcome to IntelliJ" manage=off
+yabai -m rule --add label="Intellij Welcome" title="Welcome to IntelliJ" manage=off
