--- a/_nodes/mcbrick/.yabairc
+++ b/_nodes/mcbrick/.yabairc
@@ -7,7 +7,7 @@ yabai -m signal --add event=dock_did_restart action="sudo yabai --load-sa"
 # global settings
 yabai -m config layout bsp
 yabai -m config external_bar                 off:45:0
-yabai -m config mouse_follows_focus          on
+yabai -m config mouse_follows_focus          off
 yabai -m config focus_follows_mouse          autoraise
 yabai -m config window_placement             second_child
 yabai -m config window_topmost               on
