--- a/_nodes/mcbrick/.yabairc
+++ b/_nodes/mcbrick/.yabairc
@@ -4,6 +4,9 @@
 sudo yabai --load-sa
 yabai -m signal --add event=dock_did_restart action="sudo yabai --load-sa"
 
+# you too, intellij
+yabai -m signal --add event=window_created action="${HOME}/bin/raise-ij" 
+
 # global settings
 yabai -m config layout bsp
 yabai -m config external_bar                 off:45:0
