--- a/_nodes/mcbrick/.skhdrc
+++ b/_nodes/mcbrick/.skhdrc
@@ -36,6 +36,20 @@ shift + ctrl - 4 : yabai -m window --space 4
 shift + ctrl - 5 : yabai -m window --space 5
 shift + ctrl - 6 : yabai -m window --space 6
 
+# destroy space
+shift + ctrl - w : yabai -m space --destroy
+
+# create desktop and follow focus - uses jq for parsing json (brew install jq)
+shift + ctrl - n : yabai -m space --create && \
+                index="$(yabai -m query --spaces --display | jq 'map(select(."native-fullscreen" == 0))[-1].index')" && \
+                yabai -m space --focus "${index}"
+
+# float / unfloat
+shift + ctrl - space : yabai -m window --toggle float && yabai -m window --grid 4:4:1:1:2:2
+
+# change layout
+shift + ctrl - s : yabai -m space --layout $(yabai -m query --spaces --space | jq -r 'if .type == "bsp" then "float" else "bsp" end')
+
 # toggle window native fullscreen
 shift + ctrl - f : yabai -m window --toggle native-fullscreen
 ctrl - f : yabai -m window --toggle zoom-fullscreen
