--- a/_nodes/mcbrick/.yabairc
+++ b/_nodes/mcbrick/.yabairc
@@ -21,7 +21,7 @@ yabai -m config mouse_follows_focus          off
 yabai -m config focus_follows_mouse          autoraise
 yabai -m config window_placement             second_child
 yabai -m config window_topmost               on
-yabai -m config window_shadow                off
+yabai -m config window_shadow                float
 yabai -m config window_opacity               off
 yabai -m config window_border                off
 yabai -m config active_window_border_color   0xff4c7899
