--- a/_nodes/mcbrick/.skhdrc
+++ b/_nodes/mcbrick/.skhdrc
@@ -15,12 +15,12 @@ ctrl - up    : yabai -m window --focus north
 ctrl - right : yabai -m window --focus east
 
 # focus space
-ctrl - 1 : yabai -m space --focus 1
-ctrl - 2 : yabai -m space --focus 2
-ctrl - 3 : yabai -m space --focus 3
-ctrl - 4 : yabai -m space --focus 4
-ctrl - 5 : yabai -m space --focus 5
-ctrl - 6 : yabai -m space --focus 6
+ctrl - 1 : yabai-switch-space 1
+ctrl - 2 : yabai-switch-space 2
+ctrl - 3 : yabai-switch-space 3
+ctrl - 4 : yabai-switch-space 4
+ctrl - 5 : yabai-switch-space 5
+ctrl - 6 : yabai-switch-space 6
 
 # move window
 shift + ctrl - h : yabai -m window --warp west
