--- a/devel/.tigrc
+++ b/devel/.tigrc
@@ -112,7 +112,6 @@ set show-notes			= yes		# When non-bool passed as `--show-notes=...` (diff)
 #set diff-context		= 3		# Number of lines to show around diff changes (diff)
 #set diff-options		= -C		# User-defined options for `tig show` (git-diff)
 set diff-highlight		= /usr/local/bin/diff-highlight		# String (or bool): Path to diff-highlight script,
-						#                   defaults to `diff-highlight`.
 #set blame-options		= -C -C -C	# User-defined options for `tig blame` (git-blame)
 #set log-options		= --pretty=raw	# User-defined options for `tig log` (git-log)
 #set main-options		= -n 1000	# User-defined options for `tig` (git-log)
@@ -141,3 +140,16 @@ color cursor blue default standout
 
 # Quick commit
 bind status C >git commit
+
+# Quick (F)ixup
+bind main F !>sh -c "git commit --fixup=%(commit) && GIT_SEQUENCE_EDITOR=true git rebase -i %(commit)^ --autostash --autosquash"
+
+# Quick (R)eword
+bind main R !>sh -c "GIT_SEQUENCE_EDITOR=\"gsed -i -e '1 s/^pick /reword /'\" git rebase -i %(commit)^ --autostash"
+
+# Quick (E)dit
+bind main E !<>sh -c "GIT_SEQUENCE_EDITOR=\"gsed -i -e '1 s/^pick /edit /'\" git rebase -i %(commit)^ --autostash"
+
+# Quick (D)rop
+bind main D !>sh -c "GIT_SEQUENCE_EDITOR=\"gsed -i -e '1 s/^pick /drop /'\" git rebase -i %(commit)^ --autostash"
+
