[vim] pimp search

--- a/wm/.config/alacritty/alacritty.yml
+++ b/wm/.config/alacritty/alacritty.yml
@@ -70,6 +70,7 @@ key_bindings:
   - { key: K, mods: Alt|Shift, chars: "\x0B" }
   - { key: L, mods: Command, chars: "\x0C" }
   - { key: F, mods: Command, chars: "\x01/" } 
+  - { key: N, mods: Command, chars: "\x0E" } 
 
 url:
   launcher: open
