--- a/_nodes/mcbrick/.yabairc
+++ b/_nodes/mcbrick/.yabairc
@@ -10,7 +10,7 @@ yabai -m signal --add label=inject_sa \
 # - skip action on windows with empty titles, as they are just tooltips
 yabai -m signal --add label=autoraise_ij \
   event=window_created \
-  action="${HOME}/bin/yabai-topmost" \
+  action="${HOME}/bin/yabai-topmost IntelliJ" \
   app="^IntelliJ" \
   title!="^$"
 
@@ -20,7 +20,7 @@ yabai -m config external_bar                 off:45:0
 yabai -m config mouse_follows_focus          off
 yabai -m config focus_follows_mouse          off
 yabai -m config window_placement             second_child
-yabai -m config window_topmost               off
+yabai -m config window_topmost               on
 yabai -m config window_shadow                float
 yabai -m config window_opacity               off
 yabai -m config window_border                off
