[www] open the private browser by default

--- a/_nodes/mcbrick/.skhdrc
+++ b/_nodes/mcbrick/.skhdrc
@@ -14,7 +14,8 @@ resize < l : yabai -m window --resize left:20:0
 ctrl - 0x32 : open -na /Applications/Alacritty.app --args -e sh -c "tmux attach -d -t base || exec tmux new -s base"
 shift + ctrl - 0x32 : open -na /Applications/Alacritty.app --args --option window.decorations=full -e sh -c "tmux attach -d -t base || exec tmux new -s base"
 ctrl - 0x24 : open -na /Applications/Alacritty.app
-ctrl - 0x2C : open -na /Applications/Google\ Chrome.app
+ctrl - 0x2C : open -na /Applications/Brave\ Browser.app
+shift + ctrl - 0x2C : open -na /Applications/Google\ Chrome.app
 
 # focus window
 ctrl - h : yabai -m window --focus west
