[backup] reorg and allow for multiple backups

--- a/_arch/etc/borgmatic/autoborg@.service
+++ b/_arch/etc/borgmatic/autoborg@.service
@@ -18,4 +18,4 @@ Restart=no
 
 LogRateLimitIntervalSec=0
 
-ExecStart=systemd-inhibit --who="borgmatic" --why="Prevents interrupting scheduled backup" /usr/bin/borgmatic --syslog-verbosity 1
+ExecStart=systemd-inhibit --who="borgmatic" --why="Prevents interrupting scheduled backup" /usr/bin/borgmatic --syslog-verbosity 1 -c /etc/borgmatic/%i.yaml
