--- a/_arch/etc/borgmatic/root.yaml
+++ b/_arch/etc/borgmatic/root.yaml
@@ -5,6 +5,7 @@ location:
 
   repositories:
     - /home/karelian/backup/shrewd/root_borg
+    - trial:/home/karelian/backup/shrewd/root_borg
 
   one_file_system: true
 
