[i915] try out different Xorg options

--- a/_arch/etc/X11/xorg.conf.d/20-intel.conf
+++ b/_arch/etc/X11/xorg.conf.d/20-intel.conf
@@ -1,7 +1,9 @@
 Section "Device"
 	Identifier "Intel Graphics"
-	Option "TearFree" "true"
-	Option "DRI" "3"
-	#Option "AccelMethod" "sna"
-	#Option "SwapbuffersWait" "true"
+	Driver "intel"
+	Option "AccelMethod" "sna"
+    Option "TearFree" "true"
+    Option "TripleBuffer" "true"
+    Option "DRI" "2"
+    #Option "SwapbuffersWait" "true"
 EndSection
