pass tmux titles to alacritty

--- a/shell/.tmux.conf
+++ b/shell/.tmux.conf
@@ -24,6 +24,9 @@ set -g renumber-windows on
 set -g status-left ''
 set -g status-right ''
 
+# set title
+set -g set-titles on
+set -g set-titles-string "tmux #S:#W"
 
 # force a reload of the config file
 unbind r
