muck around with fonts some more

--- a/wm/.config/fontconfig/fonts.conf
+++ b/wm/.config/fontconfig/fonts.conf
@@ -1,19 +1,26 @@
 <?xml version="1.0"?>
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
-  <!-- Map Arial to Public Sans instead of Liberation Sans
+  <!-- Map Arial to Open Sans instead of Liberation Sans
        (overrides /etc/fonts/conf.d/30-metric-aliases.conf) -->
   <alias binding="same">
     <family>Arial</family>
     <accept>
-      <family>Public Sans</family>
+      <family>Open Sans</family>
     </accept>
   </alias>
-  <!-- Map sans-serif to Public Sans too -->
+  <!-- Map sans-serif to Open Sans too -->
   <alias binding="same">
     <family>sans-serif</family>
     <accept>
-      <family>Public Sans</family>
+      <family>Open Sans</family>
+    </accept>
+  </alias>
+  <!-- Map ui-monospace to Iosevka -->
+  <alias binding="same">
+    <family>ui-monospace</family>
+    <accept>
+      <family>Iosevka</family>
     </accept>
   </alias>
 </fontconfig>
