port some baz configs for gpg

--- a/gnupg/.gnupg/gpg-agent.conf
+++ b/gnupg/.gnupg/gpg-agent.conf
@@ -1,5 +1,4 @@
-# pinentry-program /usr/bin/pinentry
+enable-ssh-support
+pinentry-program /usr/bin/pinentry-gnome3
 default-cache-ttl 180000
 max-cache-ttl 864000
-# allow-loopback-pinentry
-
