--- a/gnupg/.gnupg/gpg.conf
+++ b/gnupg/.gnupg/gpg.conf
@@ -1,17 +1,19 @@
-keyserver keys.gnupg.net
-default-key 0xDE1CC78657141B46
-no-emit-version
-no-comments
+personal-digest-preferences SHA512 SHA384 SHA256
+personal-cipher-preferences AES256 AES192 AES
+personal-compress-preferences ZLIB BZIP2 ZIP Uncompressed
+default-preference-list SHA512 SHA384 SHA256 AES256 AES192 AES ZLIB BZIP2 ZIP Uncompressed
+cert-digest-algo SHA512
+s2k-digest-algo SHA512
+s2k-cipher-algo AES256
 
 keyid-format 0xlong
 with-fingerprint
+with-wkd-hash
+fingerprint
 
-list-options show-uid-validity
-verify-options show-uid-validity
+default-key 0xDE1CC78657141B46
 
-use-agent
+keyserver hkps://keys.openpgp.org
+keyserver-options auto-key-retrieve
 
-personal-cipher-preferences AES256 AES192 AES CAST5
-personal-digest-preferences SHA512 SHA384 SHA256 SHA224
-cert-digest-algo SHA512
-default-preference-list SHA512 SHA384 SHA256 SHA224 AES256 AES192 AES CAST5 ZLIB BZIP2 ZIP Uncompressed
+keyring /etc/pacman.d/gnupg/pubring.gpg
