add custom firefox css as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "_vendor/autoenv"]
 	path = _vendor/autoenv
 	url = https://github.com/zpm-zsh/autoenv
+[submodule "_vendor/firefox-css"]
+	path = _vendor/firefox-css
+	url = https://github.com/rarescosma/userChrome.css.git
