rework startup sequence to hopefully fix the kb

--- a/wm/.i3/config
+++ b/wm/.i3/config
@@ -173,6 +173,7 @@ exec --no-startup-id $Locker -c 000000
 exec --no-startup-id xautolock -time 10 -locker "$Locker"
 
 # startup
+exec --no-startup-id ~/bin/startup-xinit
 exec --no-startup-id ~/bin/startup-i3
 
 # wallpaper
