--- a/_arch/etc/fonts/conf.d/30-font-aliases.conf
+++ b/_arch/etc/fonts/conf.d/30-font-aliases.conf
@@ -3,15 +3,21 @@
 <fontconfig>
   <alias>
     <family>serif</family>
-    <prefer><family>Heuristica</family></prefer>
+    <prefer>
+      <family>Heuristica</family>
+    </prefer>
   </alias>
   <alias>
     <family>sans-serif</family>
-    <prefer><family>Lato</family></prefer>
+    <prefer>
+      <family>Lato</family>
+    </prefer>
   </alias>
   <alias>
     <family>monospace</family>
-    <prefer><family>Input</family></prefer>
+    <prefer>
+      <family>Iosevka</family>
+    </prefer>
   </alias>
   <match>
     <test name="family">
