--- a/_arch/etc/fonts/conf.d/75-noto-color-emoji.conf
+++ b/_arch/etc/fonts/conf.d/75-noto-color-emoji.conf
@@ -7,139 +7,129 @@
     -->
     <match target="pattern">
         <test qual="any" name="family"><string>emoji</string></test>
-        <edit name="family" mode="assign" binding="same"><string>JoyPixels</string></edit>
+        <edit name="family" mode="assign" binding="same"><string>Noto Color Emoji</string></edit>
     </match>
 
     <!--
-    This adds JoyPixels as a final fallback font for the default font families.
-    In this case, JoyPixels will be selected if and only if no other font can provide a given symbol.
+    This adds Noto Color Emoji as a final fallback font for the default font families.
+    In this case, Noto Color Emoji will be selected if and only if no other font can provide a given symbol.
 
     Note that usually other fonts will have some glyphs available (e.g. Symbola or DejaVu fonts),
     causing some emojis to be rendered in black-and-white.
     -->
     <match target="pattern">
         <test name="family"><string>sans</string></test>
-        <edit name="family" mode="append"><string>JoyPixels</string></edit>
+        <edit name="family" mode="append"><string>Noto Color Emoji</string></edit>
     </match>
 
     <match target="pattern">
         <test name="family"><string>serif</string></test>
-        <edit name="family" mode="append"><string>JoyPixels</string></edit>
+        <edit name="family" mode="append"><string>Noto Color Emoji</string></edit>
     </match>
 
     <match target="pattern">
         <test name="family"><string>sans-serif</string></test>
-        <edit name="family" mode="append"><string>JoyPixels</string></edit>
+        <edit name="family" mode="append"><string>Noto Color Emoji</string></edit>
     </match>
 
     <match target="pattern">
         <test name="family"><string>monospace</string></test>
-        <edit name="family" mode="append"><string>JoyPixels</string></edit>
+        <edit name="family" mode="append"><string>Noto Color Emoji</string></edit>
     </match>
 
     <!--
-    Recognize legacy ways of writing JoyPixels family name.
+    Recognize legacy ways of writing Noto Color Emoji family name.
     -->
     <match target="pattern">
         <test qual="any" name="family"><string>EmojiOne</string></test>
-        <edit name="family" mode="assign" binding="same"><string>JoyPixels</string></edit>
+        <edit name="family" mode="assign" binding="same"><string>Noto Color Emoji</string></edit>
     </match>
 
     <match target="pattern">
         <test qual="any" name="family"><string>Emoji One</string></test>
-        <edit name="family" mode="assign" binding="same"><string>JoyPixels</string></edit>
+        <edit name="family" mode="assign" binding="same"><string>Noto Color Emoji</string></edit>
     </match>
 
     <match target="pattern">
         <test qual="any" name="family"><string>EmojiOne Color</string></test>
-        <edit name="family" mode="assign" binding="same"><string>JoyPixels</string></edit>
+        <edit name="family" mode="assign" binding="same"><string>Noto Color Emoji</string></edit>
     </match>
 
     <match target="pattern">
         <test qual="any" name="family"><string>EmojiOne Mozilla</string></test>
-        <edit name="family" mode="assign" binding="same"><string>JoyPixels</string></edit>
+        <edit name="family" mode="assign" binding="same"><string>Noto Color Emoji</string></edit>
     </match>
 
     <!--
-    Use JoyPixels when other popular fonts are being specifically requested.
+    Use Noto Color Emoji when other popular fonts are being specifically requested.
 
     It is quite common that websites would only request Apple and Google emoji fonts.
-    These aliases will make JoyPixels be selected in such cases to provide good-looking emojis.
+    These aliases will make Noto Color Emoji be selected in such cases to provide good-looking emojis.
 
     This obviously conflicts with other emoji fonts if you have them installed.
     -->
     <match target="pattern">
         <test qual="any" name="family"><string>Apple Color Emoji</string></test>
-        <edit name="family" mode="assign" binding="same"><string>JoyPixels</string></edit>
+        <edit name="family" mode="assign" binding="same"><string>Noto Color Emoji</string></edit>
     </match>
 
     <match target="pattern">
         <test qual="any" name="family"><string>Segoe UI Emoji</string></test>
-        <edit name="family" mode="assign" binding="same"><string>JoyPixels</string></edit>
+        <edit name="family" mode="assign" binding="same"><string>Noto Color Emoji</string></edit>
     </match>
 
     <match target="pattern">
         <test qual="any" name="family"><string>Segoe UI Symbol</string></test>
-        <edit name="family" mode="assign" binding="same"><string>JoyPixels</string></edit>
+        <edit name="family" mode="assign" binding="same"><string>Noto Color Emoji</string></edit>
     </match>
 
     <match target="pattern">
-        <test qual="any" name="family"><string>Noto Color Emoji</string></test>
-        <edit name="family" mode="assign" binding="same"><string>JoyPixels</string></edit>
-    </match>
-
-    <match target="pattern">
-        <test qual="any" name="family"><string>NotoColorEmoji</string></test>
-        <edit name="family" mode="assign" binding="same"><string>JoyPixels</string></edit>
+        <test qual="any" name="family"><string>JoyPixels</string></test>
+        <edit name="family" mode="assign" binding="same"><string>Noto Color Emoji</string></edit>
     </match>
 
     <match target="pattern">
         <test qual="any" name="family"><string>Android Emoji</string></test>
-        <edit name="family" mode="assign" binding="same"><string>JoyPixels</string></edit>
-    </match>
-
-    <match target="pattern">
-        <test qual="any" name="family"><string>Noto Emoji</string></test>
-        <edit name="family" mode="assign" binding="same"><string>JoyPixels</string></edit>
+        <edit name="family" mode="assign" binding="same"><string>Noto Color Emoji</string></edit>
     </match>
 
     <match target="pattern">
         <test qual="any" name="family"><string>Twitter Color Emoji</string></test>
-        <edit name="family" mode="assign" binding="same"><string>JoyPixels</string></edit>
+        <edit name="family" mode="assign" binding="same"><string>Noto Color Emoji</string></edit>
     </match>
 
     <match target="pattern">
         <test qual="any" name="family"><string>Twemoji</string></test>
-        <edit name="family" mode="assign" binding="same"><string>JoyPixels</string></edit>
+        <edit name="family" mode="assign" binding="same"><string>Noto Color Emoji</string></edit>
     </match>
 
     <match target="pattern">
         <test qual="any" name="family"><string>Twemoji Mozilla</string></test>
-        <edit name="family" mode="assign" binding="same"><string>JoyPixels</string></edit>
+        <edit name="family" mode="assign" binding="same"><string>Noto Color Emoji</string></edit>
     </match>
 
     <match target="pattern">
         <test qual="any" name="family"><string>TwemojiMozilla</string></test>
-        <edit name="family" mode="assign" binding="same"><string>JoyPixels</string></edit>
+        <edit name="family" mode="assign" binding="same"><string>Noto Color Emoji</string></edit>
     </match>
 
     <match target="pattern">
         <test qual="any" name="family"><string>EmojiTwo</string></test>
-        <edit name="family" mode="assign" binding="same"><string>JoyPixels</string></edit>
+        <edit name="family" mode="assign" binding="same"><string>Noto Color Emoji</string></edit>
     </match>
 
     <match target="pattern">
         <test qual="any" name="family"><string>Emoji Two</string></test>
-        <edit name="family" mode="assign" binding="same"><string>JoyPixels</string></edit>
+        <edit name="family" mode="assign" binding="same"><string>Noto Color Emoji</string></edit>
     </match>
 
     <match target="pattern">
         <test qual="any" name="family"><string>EmojiSymbols</string></test>
-        <edit name="family" mode="assign" binding="same"><string>JoyPixels</string></edit>
+        <edit name="family" mode="assign" binding="same"><string>Noto Color Emoji</string></edit>
     </match>
 
     <match target="pattern">
         <test qual="any" name="family"><string>Symbola</string></test>
-        <edit name="family" mode="assign" binding="same"><string>JoyPixels</string></edit>
+        <edit name="family" mode="assign" binding="same"><string>Noto Color Emoji</string></edit>
     </match>
 </fontconfig>
