--- a/wm/.i3/config
+++ b/wm/.i3/config
@@ -17,7 +17,7 @@ assign [instance="^roamresearch.*$"] 7
 bindsym $mod+Return exec alacritty
 bindsym $mod+0x60 exec alacritty -e sh -c "tmux attach -d -t base || exec tmux new -s base"
 bindsym $mod+0x27 exec --no-startup-id roam
-bindsym $mod+m exec --no-startup-id rofi-emoji
+bindsym $mod+m exec --no-startup-id rofi -show emoji -modi emoji
 bindsym $mod+t exec thunar
 bindsym $mod+slash exec firefox
 bindsym $mod+Shift+slash exec firefox --private-window
