--- a/_arch/etc/fonts/conf.d/30-font-aliases.conf
+++ b/_arch/etc/fonts/conf.d/30-font-aliases.conf
@@ -14,97 +14,129 @@
     <prefer><family>Input</family></prefer>
   </alias>
   <match>
-    <test name="family"><string>Arial</string></test>
+    <test name="family">
+      <string>Arial</string>
+    </test>
     <edit name="family" mode="assign" binding="strong">
       <string>Liberation Sans</string>
     </edit>
   </match>
   <match>
-    <test name="family"><string>Arial Narrow</string></test>
+    <test name="family">
+      <string>Arial Narrow</string>
+    </test>
     <edit name="family" mode="assign" binding="strong">
       <string>Liberation Sans Narrow</string>
     </edit>
   </match>
   <match>
-    <test name="family"><string>Consolas</string></test>
+    <test name="family">
+      <string>Consolas</string>
+    </test>
     <edit name="family" mode="assign" binding="strong">
       <string>Input</string>
     </edit>
   </match>
   <match>
-    <test name="family"><string>Courier New</string></test>
+    <test name="family">
+      <string>Courier New</string>
+    </test>
     <edit name="family" mode="assign" binding="strong">
       <string>Courier Prime</string>
     </edit>
   </match>
   <match>
-    <test name="family"><string>Geneva</string></test>
+    <test name="family">
+      <string>Geneva</string>
+    </test>
     <edit name="family" mode="assign" binding="strong">
       <string>Noto Sans</string>
     </edit>
   </match>
   <match>
-    <test name="family"><string>Helvetica</string></test>
+    <test name="family">
+      <string>Helvetica</string>
+    </test>
     <edit name="family" mode="assign" binding="strong">
       <string>Liberation Sans</string>
     </edit>
   </match>
   <match>
-    <test name="family"><string>Helvetica Narrow</string></test>
+    <test name="family">
+      <string>Helvetica Narrow</string>
+    </test>
     <edit name="family" mode="assign" binding="strong">
       <string>Liberation Sans Narrow</string>
     </edit>
   </match>
   <match>
-    <test name="family"><string>Helvetica Neue</string></test>
+    <test name="family">
+      <string>Helvetica Neue</string>
+    </test>
     <edit name="family" mode="assign" binding="strong">
       <string>Lato</string>
     </edit>
   </match>
   <match>
-    <test name="family"><string>Lucida Console</string></test>
+    <test name="family">
+      <string>Lucida Console</string>
+    </test>
     <edit name="family" mode="assign" binding="strong">
       <string>Input</string>
     </edit>
   </match>
   <match>
-    <test name="family"><string>Lucida Sans Typewriter</string></test>
+    <test name="family">
+      <string>Lucida Sans Typewriter</string>
+    </test>
     <edit name="family" mode="assign" binding="strong">
       <string>Input</string>
     </edit>
   </match>
   <match>
-    <test name="family"><string>Lucida Sans</string></test>
+    <test name="family">
+      <string>Lucida Sans</string>
+    </test>
     <edit name="family" mode="assign" binding="strong">
       <string>Droid Sans</string>
     </edit>
   </match>
   <match>
-    <test name="family"><string>Lucida Grande</string></test>
+    <test name="family">
+      <string>Lucida Grande</string>
+    </test>
     <edit name="family" mode="assign" binding="strong">
       <string>Droid Sans</string>
     </edit>
   </match>
   <match>
-    <test name="family"><string>SegoeUI</string></test>
+    <test name="family">
+      <string>SegoeUI</string>
+    </test>
     <edit name="family" mode="assign" binding="strong">
       <string>Lato</string>
     </edit>
   </match>
   <match>
-    <test name="family"><string>Tahoma</string></test>
+    <test name="family">
+      <string>Tahoma</string>
+    </test>
     <edit name="family" mode="assign" binding="strong">
       <string>DejaVu Sans Condensed</string>
     </edit>
   </match>
   <match>
-    <test name="family"><string>Times New Roman</string></test>
+    <test name="family">
+      <string>Times New Roman</string>
+    </test>
     <edit name="family" mode="assign" binding="strong">
       <string>Liberation Serif</string>
     </edit>
   </match>
   <match>
-    <test name="family"><string>Verdana</string></test>
+    <test name="family">
+      <string>Verdana</string>
+    </test>
     <edit name="family" mode="assign" binding="strong">
       <string>DejaVu Sans</string>
     </edit>
