switch to ubuntu keyserver

--- a/gnupg/.gnupg/gpg.conf
+++ b/gnupg/.gnupg/gpg.conf
@@ -13,7 +13,7 @@ fingerprint
 
 default-key 0xDE1CC78657141B46
 
-keyserver hkps://keys.openpgp.org
+keyserver hkps://keyserver.ubuntu.com
 keyserver-options auto-key-retrieve
 
 keyring /etc/pacman.d/gnupg/pubring.gpg
