clean home, pt. 2

--- a/misc/.config/mpd.conf
+++ b/misc/.config/mpd.conf
@@ -1,11 +1,11 @@
 # See: /usr/share/doc/mpd/mpdconf.example
 
-pid_file "~/.local/mpd/mpd.pid"
-db_file "~/.local/mpd/mpd.db"
-state_file "~/.local/mpd/mpdstate"
-playlist_directory "~/.local/mpd/playlists"
+pid_file "~/.local/state/mpd/mpd.pid"
+db_file "~/.local/state/mpd/mpd.db"
+state_file "~/.local/state/mpd/mpdstate"
+playlist_directory "~/.local/state/mpd/playlists"
 
-music_directory "~/.local/mpd/music"
+music_directory "~/.local/state/mpd/music"
 
 audio_output {
     type "pulse"
