--- a/wm/.i3/config
+++ b/wm/.i3/config
@@ -170,7 +170,7 @@ bar {
 # locker
 set $Locker ~/.i3/locker.sh
 exec --no-startup-id $Locker -c 000000
-exec --no-startup-id xautolock -time 10 -locker "$Locker"
+exec --no-startup-id xautolock -corners 0-00 -cornersize 150 -time 10 -locker "$Locker"
 
 # startup
 exec --no-startup-id ~/bin/startup-i3
