--- a/wm/.i3/config
+++ b/wm/.i3/config
@@ -8,17 +8,16 @@ font "pango:Iosevka 8"
 floating_modifier $mod
 
 # specific window configuration
-for_window [window_role="pop-up" instance="^(?!roamresearch).*"] floating enable
 for_window [class="Pinentry"] floating enable
 for_window [class="^jetbrains-.+"][window_type=dialog] focus
 for_window [title="^rofi-scratch:" ] floating enable
 for_window [title="^rofi-scratch:" ] border 1px
-assign [instance="^roamresearch.*$"] 7
+assign [class="obsidian"] 7
 
 # terminals
 bindsym $mod+Return exec alacritty
 bindsym $mod+0x60 exec alacritty -e sh -c "tmux attach -d -t base || exec tmux new -s base"
-bindsym $mod+0x27 exec --no-startup-id roam
+bindsym $mod+0x27 exec --no-startup-id raiseorlaunch -c obsidian -e obsidian
 bindsym $mod+m exec --no-startup-id rofi -show emoji -modi emoji
 bindsym $mod+t exec thunar
 bindsym $mod+slash exec firefox
