switch to external DAC

--- a/misc/.config/mpd-alsa.conf
+++ b/misc/.config/mpd-alsa.conf
@@ -10,6 +10,11 @@ music_directory "~/.local/state/mpd/music"
 audio_output {
     type "alsa"
     name "mpd_alsa"
-    device "hw:0"
-    mixer_device "hw:0"
+    device "hw:1"
+    mixer_device "hw:1"
+    mixer_control "D10 Balanced"
+    auto_resample "no"
+    auto_channels "no"
+    auto_format "no"
+    dop "yes"
 }
