--- a/misc/.config/systemd/user/scream-wingoz.service
+++ b/misc/.config/systemd/user/scream-wingoz.service
@@ -5,7 +5,7 @@ After=network.target
 [Service]
 Type=simple
 ExecStartPre=/usr/bin/systemctl --user stop "pipewire*"
-ExecStart=scream -v -o alsa -d "hw:0,0" -m /dev/shm/scream-ivshmem -t 150
+ExecStart=scream -v -o alsa -d "plughw:1,0" -m /dev/shm/scream-ivshmem -t 150
 ExecStopPost=/usr/bin/systemctl --user start pipewire pipewire-media-session pipewire-pulse
 Restart=on-failure
 RestartSec=5
