--- a/_arch/etc/interception/udevmon.yaml
+++ b/_arch/etc/interception/udevmon.yaml
@@ -1,4 +1,6 @@
 - JOB: "intercept -g $DEVNODE | dual-function-keys -c /etc/interception/dual-function-keys/modifiers.yaml | uinput -d $DEVNODE"
   DEVICE:
     NAME: "USB Keyboard"
-
+- JOB: "intercept -g $DEVNODE | dual-function-keys -c /etc/interception/dual-function-keys/modifiers.yaml | uinput -d $DEVNODE"
+  DEVICE:
+    NAME: "AT Translated Set 2 keyboard"
