--- a/devel/.config/tig/config
+++ b/devel/.config/tig/config
@@ -149,11 +149,11 @@ bind status C !git commit -v
 bind main F !>sh -c "git commit --fixup=%(commit) && GIT_SEQUENCE_EDITOR=true git rebase -i %(commit)^ --autostash --autosquash"
 
 # Quick (R)eword
-bind main R !>sh -c "GIT_SEQUENCE_EDITOR=\"gsed -i -e '1 s/^pick /reword /'\" git rebase -i %(commit)^ --autostash"
+bind main R !>sh -c "GIT_SEQUENCE_EDITOR=\"sed -i -e '1 s/^pick /reword /'\" git rebase -i %(commit)^ --autostash"
 
 # Quick (E)dit
-bind main E !<>sh -c "GIT_SEQUENCE_EDITOR=\"gsed -i -e '1 s/^pick /edit /'\" git rebase -i %(commit)^ --autostash"
+bind main E !<>sh -c "GIT_SEQUENCE_EDITOR=\"sed -i -e '1 s/^pick /edit /'\" git rebase -i %(commit)^ --autostash"
 
 # Quick (D)rop
-bind main D !>sh -c "GIT_SEQUENCE_EDITOR=\"gsed -i -e '1 s/^pick /drop /'\" git rebase -i %(commit)^ --autostash"
+bind main D !>sh -c "GIT_SEQUENCE_EDITOR=\"sed -i -e '1 s/^pick /drop /'\" git rebase -i %(commit)^ --autostash"
 
