[vim] ctrl-<l,h> for fwd, back, ctrl-b for :nohl

--- a/devel/.ideavimrc
+++ b/devel/.ideavimrc
@@ -36,13 +36,13 @@ nmap <leader>d <Action>(GotoDeclaration)
 nmap <leader>e <Action>(RecentFiles)
 nmap <leader>m <Action>(ShowBookmarks)
 nmap <C-h> <Action>(RecentFiles)
+nmap <C-h> <Action>(Back)
+nmap <C-l> <Action>(Forward)
 nmap gp <Action>(RecentProjectListGroup)
 nmap gc <Action>(GotoClass)
 nmap gi <Action>(GotoImplementation)
 nmap gu <Action>(GotToSuperMethod)
 nmap gt <Action>(GotoTest)
-nmap gb <Action>(Back)
-nmap gf <Action>(Forward)
 
 " IDE search & replace.
 nmap <leader>f <Action>(Find)
