gruvbox that vim

--- a/shell/.tmux.conf
+++ b/shell/.tmux.conf
@@ -2,8 +2,8 @@
 set -g history-limit 100000
 
 # improve colors
-set -g default-terminal "screen-256color"
-set -ga terminal-overrides ",xterm-256color*:Tc"
+set -g default-terminal "tmux-256color"
+set -ga terminal-overrides ",xterm-256color:RGB"
 
 # terminator like window splits
 bind e split-window -h -c '#{pane_current_path}'
