--- a/wm/.i3/config
+++ b/wm/.i3/config
@@ -29,6 +29,8 @@ bindsym $mod+Shift+q kill
 # rofi, rofi, rofi
 bindsym $alt+space exec --no-startup-id rofi -show combi
 bindsym $mod+backslash exec --no-startup-id ~/bin/rofi-scratch
+bindsym $mod+u exec --no-startup-id rofi -show cht -modi cht:cht-rofi
+bindsym $mod+Shift+u exec --no-startup-id cht-query
 
 # focus on a specific task
 bindsym $mod+space exec --no-startup-id ~/.i3/focus.sh
