--- a/_arch/etc/interception/dual-function-keys/modifiers.yaml
+++ b/_arch/etc/interception/dual-function-keys/modifiers.yaml
@@ -7,3 +7,11 @@ MAPPINGS:
       TAP: KEY_BACKSPACE
       HOLD: KEY_RIGHTALT
       HOLD_START: BEFORE_CONSUME_OR_RELEASE
+    - KEY: KEY_SEMICOLON
+      TAP: KEY_SEMICOLON
+      HOLD: KEY_RIGHTCTRL
+      HOLD_START: BEFORE_CONSUME_OR_RELEASE
+    - KEY: KEY_APOSTROPHE
+      TAP: KEY_APOSTROPHE
+      HOLD: KEY_LEFTALT
+      HOLD_START: BEFORE_CONSUME_OR_RELEASE
