--- a/misc/.config/systemd/user/espanso.service.d/override.conf
+++ b/misc/.config/systemd/user/espanso.service.d/override.conf
@@ -1,3 +1,3 @@
 [Service]
-ExecStartPre=/usr/bin/find %h/.config/espanso/user -xtype l -delete
+ExecStartPre=/usr/bin/find %h/.config/espanso/match -name "tomb_*" -xtype l -delete
 Environment="PATH=%h/bin:/usr/local/bin:/:/usr/bin"
