include user in remote backup target

--- a/_arch/etc/backup/autoborg/home.yaml
+++ b/_arch/etc/backup/autoborg/home.yaml
@@ -4,7 +4,7 @@ location:
 
   repositories:
     - /home/karelian/backup/shrewd/home_borg
-    - vps:/home/karelian/backup/shrewd/home_borg
+    - karelian@vps:/home/karelian/backup/shrewd/home_borg
 
   one_file_system: true
 
