--- a/wm/.i3/config
+++ b/wm/.i3/config
@@ -230,6 +230,8 @@ bindsym $mod+Shift+r restart
 
 bindsym $mod+Shift+e exec "~/bin/display-external"
 bindsym $mod+Shift+i exec "~/bin/display-internal"
+bindsym $mod+Shift+t exec "~/bin/display-tv"
+bindsym $mod+Shift+b exec "~/bin/display-both"
 
 # reload the configuration file
 bindsym $mod+Ctrl+r reload
