--- a/devel/.ideavimrc
+++ b/devel/.ideavimrc
@@ -27,6 +27,8 @@ nmap [[ <Action>(MethodUp)
 nmap ]] <Action>(MethodDown)
 
 " IDE project navigation.
+nmap <leader>q <Action>(CloseContent)
+nmap <leader>Q <Action>(ReopenClosedTab)
 nmap <leader>d <Action>(GotoDeclaration)
 nmap <leader>m <Action>(ShowBookmarks)
 nmap <C-f> <Action>(RecentFiles)
@@ -47,7 +49,6 @@ nmap <leader>u <Action>(FindUsages)
 
 " IDE refactor.
 nmap <leader>n <Action>(Inline)
-nmap <leader>q <Action>(QuickJavaDoc)
 nmap <leader>r <Action>(RenameElement)
 nmap <leader>R <Action>(Refactorings.QuickListPopupAction)
 nmap <leader>v <Action>(IntroduceVariable)
