fix auto tomb close unit

--- a/_arch/etc/systemd/system/closetomb.service
+++ b/_arch/etc/systemd/system/closetomb.service
@@ -1,13 +1,14 @@
 [Unit]
 Description=Rest In Peace
-User=karelian
-Group=karelian
+DefaultDependencies=no
 
 [Service]
+User=karelian
+Group=karelian
 Type=oneshot
 RemainAfterExit=true
-ExecStop=/usr/bin/tomb close
+ExecStart=/usr/bin/zsh -c "source /home/karelian/.zsh/functions.zsh; tc || true"
 
 [Install]
-WantedBy=multi-user.target
+WantedBy=umount.target
 
