--- a/_arch/etc/backup/autoborg/root.yaml
+++ b/_arch/etc/backup/autoborg/root.yaml
@@ -4,8 +4,8 @@ location:
     - /boot
 
   repositories:
-    - /home/karelian/backup/shrewd/root_borg
-    - karelian@vps:/home/karelian/backup/shrewd/root_borg
+    - /home/karelian/backup/{hostname}/root_borg
+    - karelian@vps:/home/karelian/backup/{hostname}/root_borg
 
   one_file_system: true
 
@@ -33,5 +33,5 @@ retention:
 
 hooks:
   after_everything:
-    - "chown -R karelian: /home/karelian/backup/shrewd/root_borg"
+    - "chown -R karelian: /home/karelian/backup/*/root_borg"
     - "chown -R karelian: /home/karelian/.config/borg"
